openmediavault (0.3) stable; urgency=low

  * Add ability to create self-signed SSL certificates via WebGUI
  * Simplify shared folder permission handling
  * Improve user/group management
  * Improve RSync services
  * Auto-detect non-rotational rootfs devices and set the additional mount
    options noatime,discard
  * Add i18n support
  * Mantis 0000200: Domain field in general config
  * Mantis 0000380: Add the ability to "wipe" or format a disk
  * Mantis 0000385: Not able to install multiple plugins at once
  * Mantis 0000394: FTP: Not possible to set any directives for module mod_tls.c
  * Mantis 0000400: NFS performance options
  * Mantis 0000406: growing online raid capacity

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 07 Jan 2012 14:30:55 +0100

openmediavault (0.2.7.3) stable; urgency=low

  * Mantis 0000395: The Upgrade Manager does not show all Packages that
    would be upgraded/installed

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 18 Mar 2012 23:01:08 +0100

openmediavault (0.2.7.2) stable; urgency=low

  * Mantis 0000389: Support HP SmartArray controllers (cciss). Please note this
    does not include any management features. Do not set any AAM/APM or
    S.M.A.R.T. options for this devices in the 'Physical Disks' page.
  * Remove configuration backup/restore menu in WebGUI because it does
    not work and may corrupt existing installations
  * Fix bug in WebGUI with Windows IE 7 and 8

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Feb 2012 15:10:47 +0100

openmediavault (0.2.7.1) stable; urgency=low

  * Mantis 0000383: Services | FTP | Ban list --> Time interval and Expire
    value creating/editing issues

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Feb 2012 00:50:00 +0100

openmediavault (0.2.7) stable; urgency=low

  * Various bug fixes
  * Make the web server not so talkative

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Feb 2012 20:28:32 +0100
